--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
         "funlog": "bin/log.js"
     },
     "scripts": {
-        "fill": "your scripts here",
-        "test": "mocha test/test.mjs"
+        "test": "mocha test/test.mjs",
+        "test1": "bin/log.js test/data/test1.js",
+        "cov": "nyc npm run test"
     },
     "dependencies": {
         "acorn": "^8.8.2",
@@ -16,7 +17,9 @@
         "escodegen": "^2.0.0",
         "espree": "^9.4.1",
         "estraverse": "^5.2.0",
-        "underscore": "^1.12.0"
+        "underscore": "^1.12.0",
+        "mocha": "^9.2.0",
+        "nyc": "^15.1.0"
     },
     "version": "0.3.0",
     "devDependencies": {
