--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "scripts": {
         "test": "mocha test/test.mjs",
         "test1": "bin/log.js test/data/test1.js",
-        "cov": "nyc npm run test"
+        "test1node": "bin/log.js test/data/test1.js | node -",
+        "cov": "c8 npm run test"
     },
     "dependencies": {
         "acorn": "^8.8.2",
@@ -17,9 +18,10 @@
         "escodegen": "^2.0.0",
         "espree": "^9.4.1",
         "estraverse": "^5.2.0",
-        "underscore": "^1.12.0",
         "mocha": "^9.2.0",
-        "nyc": "^15.1.0"
+        "nyc": "^15.1.0",
+        "underscore": "^1.12.0",
+        "c8": "^7.13.0"
     },
     "version": "0.3.0",
     "devDependencies": {
